sass/plugins/jetpack/_jetpack.scss
#master {
	#jp-relatedposts {
		margin: 0;
		padding: 0;
		@include rem('margin-top',70px);
		@include rem('padding-bottom',54px); // - 1em
		border-bottom: 2px solid $color__border;
	}
	#jp-relatedposts .jp-relatedposts-headline {
		margin: 0 0 30px;
		padding: 0;
		display: block;
		float: none;
		color: $color__white;
		text-align: center;

		em {
			margin: 0;
			@include rem('font-size',$font__small-size);
			text-transform: uppercase;
			text-align: center;
			font-weight: bold;
			display: inline-block;
			padding: 0.7em 1.5em;
		}

		em:before {
			display: none;
		}
	}

	#jp-relatedposts .jp-relatedposts-items .jp-relatedposts-post .jp-relatedposts-post-title a {
		font-weight: bold;
	}

	#jp-relatedposts .jp-relatedposts-items-visual .jp-relatedposts-post img.jp-relatedposts-post-img {
		margin-bottom: 0.5em;
	}
	#jp-relatedposts .jp-relatedposts-items-visual h4.jp-relatedposts-post-title {
		line-height: $font__line-height-heading;
		@include rem('font-size',$font__xsmall_size);
		margin-bottom: 0.5em;
	}

	#jp-relatedposts .jp-relatedposts-items p {
		@include rem('font-size',$font__xsmall_size);
		line-height: $font__line-height-body;
	}

	#jp-relatedposts .jp-relatedposts-items p.jp-relatedposts-post-date,
	#jp-relatedposts .jp-relatedposts-items p.jp-relatedposts-post-context {
		text-transform: uppercase;
		@include rem('font-size',$font__tiny-size);
		font-weight: bold;
		line-height: $font__line-height-heading;
	}

	#jp-relatedposts .jp-relatedposts-items .jp-relatedposts-post:hover .jp-relatedposts-post-title a {
		text-decoration: none;
	}

	.sharedaddy {
		@include rem('margin-top',40px);
	}

	div.sharedaddy .comment-display {
		display: none;
		@include rem('font-size',$font__tiny-size);
		text-transform: uppercase;
		font-weight: bold;
		color: $color__text-light;
	}

	div.sharedaddy h3.sd-title {
		@include rem('font-size',$font__tiny-size);
		text-transform: uppercase;
		font-weight: bold;
		color: $color__text-light;

		&:before {
			display: none;
			border-top: 2px solid $color__border;
		}
	}

	.jetpack-hide-share-count .share-count {
		display: none;
	}

	.sd-content {
		margin-bottom: -5px;

		.share-end {
			display: none;
		}
	}

	.sd-content ul {
		margin: 0 !important;
	}

	.sd-social-icon .sd-content ul li[class*="share-"] a.sd-button {
		margin-top: 0;
	}

	.sd-social-icon {
		.sd-content ul li a {
			color: $color__text;

			&:before {
				color: $color__white !important;
			}
		}
	}

	.sd-social-text,
	.sd-social-icon-text {
		.sd-content ul li a {
			color: $color__white !important;
			@include rem('font-size',$font__tiny-size);
			font-family: $font__main;
			line-height: $font__line-height-body;
			border-width: 0;
			box-shadow: none;
			font-weight: bold;
			border-radius: $button__radius;
		}
	}

	.sd-social-icon .sd-content ul li[class*="share-"] a:hover,
	.sd-social-icon .sd-content ul li[class*="share-"] div.option a:hover {
		opacity: 1;
	}

	#infinite-handle span {
		background: none;
		border-radius: 0;
		padding: 0;
	}

	.infinite-loader,
	#infinite-handle {
		@include rem('margin-top',70px);
		@include rem('margin-bottom',70px);
	}

	#infinite-footer .blog-credits a,
	#infinite-footer .blog-info a {
		color: $color__text;
		text-decoration: none;

		&:hover {
			color: $color__text-dark;
			text-decoration: none;
		}
	}

	#infinite-footer .blog-info a {
		@include rem('font-size',$font__xsmall-size);
	}

	#infinite-footer .blog-credits a {
		@include rem('font-size',$font__tiny-size);
	}

	#infinite-footer .blog-credits {
		color: $color__text;
		text-decoration: none;
		@include rem('font-size',$font__tiny-size);

		.genericons-neue {
			vertical-align: middle;
		}
	}

	.comment-subscription-form {
		margin-bottom: 0;
		margin-top: 0;
	}

	.slideshow-window {
		border: 0;
		border-radius: 0;
	}
}
@media (min-width: 700px) {
	#master {
		.single-post .entry-footer {
			.sharedaddy {
				@include rem('margin-top',0px);
				@include rem('margin-bottom',-60px);
				margin-right: -5px;
			}

			.entry-footer-meta .comments-link {
				display: none;
			}

			div.sharedaddy .comment-display .genericons-neue {
				margin-right: 0.5em;
			}

			div.sharedaddy .sd-content,
			div.sharedaddy .comment-display {
				display: inline-block;
			}

			div.sharedaddy .comment-display {
				width: 30%;
			}

			div.sharedaddy {
				.sd-social-icon-text,
				.sd-social-icon {
					.comment-display span,
					.comment-display a {
						position: relative;
						top: 0.15em;
					}
				}
			}

			div.sharedaddy .sd-content {
				text-align: right;
				width: 70%;
			}

			div.sharedaddy h3.sd-title{
				display: none;
			}
		}
	}
}

// Jetpack Authors
#master .widget_authors ul ul {
	margin-top: 0.7em;
}

// Jetpack Subscribe
#master .jetpack_subscription_widget {
	#subscribe-text {
	}
}

// Maps & Contact Info
#master .widget_contact_info {
	.confit-address,
	.confit-phone,
	.confit-email,
	.confit-hours {
		@include rem('padding-left',25px);
		@include rem('font-size',$font__medium-size);
		position: relative;
		line-height: $font__line-height-heading;
		margin-top: 0.7em;

		&:before {
			@include genericons-neue;
			position: absolute;
			left: 0;
			top: 1px;
		}
	}

	iframe + div {
		margin-top: 0;
	}

	.confit-address:before {
		content: "\f417";
	}
	.confit-phone:before {
		content: "\f437";
	}
	.confit-email:before {
		content: "\f410";
		top: 2px;
	}
	.confit-hours:before {
		content: "\f303";
	}
}

// Flickr
.widget_flickr {
	.flickr-wrapper {
		text-align: center;
	}

	.flickr-images {
		a {
			display: block;
		}

		img {
			margin: 2px;
			padding: 0;
			vertical-align: top;
		}
	}
	
	.flickr-more {
		display: inline-block;
		margin-top: 1.5em;
	}
}

// Google Plus Badge
.widget_googleplus_badge {
	text-align: center;
}

// Gravatar Profile
.widget-grofile {
	text-align: center;

	.grofile-meta {
		> :first-child {
			margin-top: 0;
		}
	}
	.grofile-thumbnail {
		border-radius: 100%;
	}
}

// Countdown
.milestone-widget {
	.milestone-countdown {
		color: $color__text;
	}
	.milestone-countdown,
	.milestone-message {
		border-color: $color__border;
	}

	.milestone-header {
		color: $color__white;
	}
}

// Contact
#master {
	.contact-form input[type="email"],
	.contact-form input[type="text"],
	.contact-form input[type="url"] {
		max-width: none;
	}
}

// Top Posts
#master {
	.widget_top-posts {
		.widgets-grid-layout .widget-grid-view-image img {
			vertical-align: top;
		}
		.widgets-list-layout {
			.widgets-list-layout-blavatar {
				max-width: none;
				margin-top: .4em;
			}
			.widgets-list-layout-links {
				a {
					@include rem('font-size',$font__xsmall-size);
				}
			}
		}
	}
}

